--- a/Memes/Storyboards/Base.lproj/Main.storyboard
+++ b/Memes/Storyboards/Base.lproj/Main.storyboard
@@ -23,18 +23,32 @@
                             <inset key="sectionInset" minX="0.0" minY="50" maxX="0.0" maxY="50"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="z2I-ee-GEk">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="z2I-ee-GEk" customClass="MemCell" customModule="Memes" customModuleProvider="target">
                                 <rect key="frame" x="26.666666666666668" y="50" width="340" height="340"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="z96-Yi-Ub2">
                                     <rect key="frame" x="0.0" y="0.0" width="340" height="340"/>
                                     <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="duU-MW-2iH">
+                                            <rect key="frame" x="0.0" y="0.0" width="340" height="340"/>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailing" secondItem="duU-MW-2iH" secondAttribute="trailing" id="2RU-my-C4J"/>
+                                        <constraint firstItem="duU-MW-2iH" firstAttribute="leading" secondItem="z96-Yi-Ub2" secondAttribute="leading" id="LD8-gE-jWM"/>
+                                        <constraint firstAttribute="bottom" secondItem="duU-MW-2iH" secondAttribute="bottom" id="Z7b-Hn-4Jo"/>
+                                        <constraint firstItem="duU-MW-2iH" firstAttribute="top" secondItem="z96-Yi-Ub2" secondAttribute="top" id="sS2-9L-s0h"/>
+                                    </constraints>
                                 </collectionViewCellContentView>
                                 <userDefinedRuntimeAttributes>
                                     <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                         <integer key="value" value="15"/>
                                     </userDefinedRuntimeAttribute>
                                 </userDefinedRuntimeAttributes>
+                                <connections>
+                                    <outlet property="memImage" destination="duU-MW-2iH" id="kHk-FS-Dqr"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
