--- a/Memes/Storyboards/Base.lproj/Main.storyboard
+++ b/Memes/Storyboards/Base.lproj/Main.storyboard
@@ -16,14 +16,14 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="50" minimumInteritemSpacing="50" id="DEE-sy-hE1">
+                        <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="20" minimumInteritemSpacing="0.0" id="DEE-sy-hE1">
                             <size key="itemSize" width="340" height="340"/>
                             <size key="headerReferenceSize" width="0.0" height="0.0"/>
                             <size key="footerReferenceSize" width="0.0" height="0.0"/>
                             <inset key="sectionInset" minX="0.0" minY="50" maxX="0.0" maxY="50"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="z2I-ee-GEk" customClass="MemCell" customModule="Memes" customModuleProvider="target">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="MemCell" id="z2I-ee-GEk" customClass="MemCell" customModule="Memes" customModuleProvider="target">
                                 <rect key="frame" x="26.666666666666668" y="50" width="340" height="340"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="z96-Yi-Ub2">
@@ -32,21 +32,31 @@
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="duU-MW-2iH">
                                             <rect key="frame" x="0.0" y="0.0" width="340" height="340"/>
+                                            <userDefinedRuntimeAttributes>
+                                                <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                    <integer key="value" value="15"/>
+                                                </userDefinedRuntimeAttribute>
+                                            </userDefinedRuntimeAttributes>
                                         </imageView>
+                                        <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="Aql-pH-c9y">
+                                            <rect key="frame" x="145" y="145" width="50" height="50"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" constant="50" id="1uM-D1-qXb"/>
+                                                <constraint firstAttribute="height" constant="50" id="cVL-hK-BMt"/>
+                                            </constraints>
+                                        </activityIndicatorView>
                                     </subviews>
                                     <constraints>
+                                        <constraint firstItem="Aql-pH-c9y" firstAttribute="centerY" secondItem="z96-Yi-Ub2" secondAttribute="centerY" id="0db-7w-mW8"/>
                                         <constraint firstAttribute="trailing" secondItem="duU-MW-2iH" secondAttribute="trailing" id="2RU-my-C4J"/>
                                         <constraint firstItem="duU-MW-2iH" firstAttribute="leading" secondItem="z96-Yi-Ub2" secondAttribute="leading" id="LD8-gE-jWM"/>
                                         <constraint firstAttribute="bottom" secondItem="duU-MW-2iH" secondAttribute="bottom" id="Z7b-Hn-4Jo"/>
                                         <constraint firstItem="duU-MW-2iH" firstAttribute="top" secondItem="z96-Yi-Ub2" secondAttribute="top" id="sS2-9L-s0h"/>
+                                        <constraint firstItem="Aql-pH-c9y" firstAttribute="centerX" secondItem="z96-Yi-Ub2" secondAttribute="centerX" id="ygg-dr-59U"/>
                                     </constraints>
                                 </collectionViewCellContentView>
-                                <userDefinedRuntimeAttributes>
-                                    <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
-                                        <integer key="value" value="15"/>
-                                    </userDefinedRuntimeAttribute>
-                                </userDefinedRuntimeAttributes>
                                 <connections>
+                                    <outlet property="activityIndicator" destination="Aql-pH-c9y" id="0TW-0p-DBX"/>
                                     <outlet property="memImage" destination="duU-MW-2iH" id="kHk-FS-Dqr"/>
                                 </connections>
                             </collectionViewCell>
